# Glyph

./: .buildconfig  .gitignore  README.md  b  build.bash  meson.build  post_install.py
data/: Gschema.xml  com.github.edhinrichsen.glyph.desktop
src/: Application.vala  Main.vala
src/Document/: Doc.vala  FileManager.vala  HTML.vala  build_page.py
src/Document/HTML/: main.css  main.html  main.js
src/Widgets/: Header.vala  Notebook.vala  Preview.vala  TextSideBar.vala  Welcome.vala  Window.vala
